# PyEvalAudio

./: .gitignore  _scripting_experiments.py  mixing_secrets_mastering.py  open_results.py  plot_results.py  pyproject.toml  readme.md  result.txt  results.py  scripting_experiments_multi.py  test.ipynb  test.py  test_all.py  test_csv.ipynb  test_resample.ipynb  testparse.py
Data/44100/peaks/: AnotherDayCalling_Full_Preview.wav.reapeaks  AnotherDayCalling_UnmasteredWAV.wav.reapeaks
Data/Conformance_Test_Items/: Itemlist-E.txt
Installation/: readme.md  setup.py
Installation/PyEvalAudio/: __init__.py
PyEvalAudio/: __init__.py  critical_bands.py  main.py
audio_effects/: __init__.py  clipper.py  compressor.py  fftfilt.py  main.py  parameter.py  volume.py
audio_effects/filters/: __init__.py  equalizer.py  main.py
np/: MOVs.py  ODG.py  PQevalAudio.py  pattern_processing.py  start.py  time_to_freq.py  utils.py
peaq_numpy/: MOVs.py  ODG.py  __init__.py  main.py  pattern_processing.py  time_to_freq.py  utils.py
utils/: resample.py
