[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyEvalAudio"
version = "0.0.1"
authors = [
  { name="Come Peladeau" },
]
description = "A Python implementation of PEAQ, as implemented in the PQevalAudio Matlab/Octave code."
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["PyEvalAudio*"]
exclude = ["tests*"]